--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,11 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="contenedor-grid">
+  <div class="header"></div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-content class="content" style="--background: antiquewhite">
+    <ion-router-outlet></ion-router-outlet>
+  </ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="footer" style="overflow: hidden; display: flex; justify-content: center;">
+    <ion-img src="assets/flores-removebg-preview3.png" style="z-index: -1;"></ion-img>
   </div>
-</ion-content>
+</div>
