--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,134 @@
-#container {
-  text-align: center;
+// #container {
+//   text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+//   position: absolute;
+//   left: 0;
+//   right: 0;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
+
+// #container strong {
+//   font-size: 20px;
+//   line-height: 26px;
+// }
+
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
+
+//   color: #8c8c8c;
+
+//   margin: 0;
+// }
+
+// #container a {
+//   text-decoration: none;
+// }
+
+// .mascota-container {
+//   // position: absolute;
+//   top: 220px;
+//   right: 20px;
+//   z-index: 1000;
+// }
+
+// // .pantalla-principal {
+// //   --background: #fcc0cf; 
+// //   display: flex;
+// //   flex-direction: column;
+// //   justify-content: flex-end;
+// //   align-items: center;
+// //   padding-bottom: 100px;
+// // }
+
+// .contenedor-grid {
+//   display: grid;
+//   grid-template-columns: 1fr 1fr 1fr 1fr;
+//   grid-template-rows: 20% 50% 30%;
+//   // background-color: rgb(248, 239, 230);
+//   height: 100%;
+//   width: 100%;
+// }
+
+// .item1 {
+//   background-color: white;
+//   grid-column: 1 / 5;
+//   grid-row: 2 / 3;
+//   overflow: hidden;
+// }
+
+.footer ion-img {
+  height: 100%;  /* 👈 ajusta el alto de la imagen */
+  width: auto;   /* 👈 mantiene proporción */
+  object-fit: contain; /* 👈 opcional: escala sin recortar */
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+// .item2 {
+//   // background-color: rgb(66, 37, 172);
+//   grid-column: 1 / 5;
+//   grid-row: 3 / 4;
+//   // overflow: hidden;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   flex-direction: column;
+// }
+
+// .footer {
+//   grid-column: 1 / 5;
+//   grid-row: 3 / 4;
+//   background-color: #f4a261;
+// }
+
+// .test {
+//   border-radius: 12px;
+//   background: #fff8dc;
+//   border: 2px solid #f4a261;
+//   box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+//   font-family: 'Comic Sans MS', sans-serif;
+// }
+
+.contenedor-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 10% 75% 15%;
+  height: 100%;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.header{
+  grid-column: 1 / 5;
+  grid-row: 1 / 2;
+  // background-color: aliceblue;
 }
 
-#container a {
-  text-decoration: none;
+.content{
+  grid-column: 1 / 5;
+  grid-row: 2 / 3;
+  // background-color: rgb(5, 56, 100);
+  height: 100%;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+}
+
+// .content ion-img {
+//   overflow: hidden;
+//   height: 40%;  /* 👈 ajusta el alto de la imagen */
+//   width: 100%;   /* 👈 mantiene proporción */
+//   // object-fit: contain; /* 👈 opcional: escala sin recortar */
+// }
+
+.inicio-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer{
+  grid-column: 1 / 5;
+  grid-row: 3 / 4;
+  // background-color: rgb(23, 184, 95);
 }
