crear componente de prueba y asignarlo a la ruta

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -8,15 +8,6 @@
     --box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8); 
     --border-color: #2f7a28; 
     z-index: 1;" 
-    color="warning">VAMOS</ion-button>
+    color="warning">VAMOS !!!</ion-button>
   </div>
 </div>
-
-<!-- <ion-content>
-  <ion-button>test</ion-button>
-  <ion-button (click)="redirecTo()" style="height: 70px; width: 60%; --color: black; font-weight: bold; --border-radius: 5px; --border-width: 2px; --border-style: solid; 
-    --box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8); 
-    --border-color: #2f7a28; 
-    z-index: 1;" 
-    color="warning">VAMOS</ion-button>
-</ion-content> -->
